--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,26 +29,32 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    viewBinding{
+        enabled = true
+    }
+
 }
 
 dependencies {
+    implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.naz013:smooth-bottom-bar:1.0.2'
+    implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha03")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha03")
-    implementation "androidx.room:room-ktx:2.4.3"
-    implementation "androidx.room:room-runtime:2.4.3"
-    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 }
